# learn-rust-projects

./: README.md
basic-calculator/src/: main.rs
basic-calculator/src/func/: input_func.rs  mod.rs  show_result.rs
basic_pointer/src/: main.rs
env_args/: Cargo.toml
env_args/src/: action.rs  help.rs  lib.rs  main.rs  result_manage.rs
find_subnet_mask/: Cargo.toml  README.md
find_subnet_mask/release/: install.sh
find_subnet_mask/src/: const_value.rs  lib.rs  main.rs  manual.rs  subnet_action.rs
games/space_ship/: Cargo.toml  README.md
games/space_ship/src/: camera.rs  debug.rs  lib.rs  main.rs  movement.rs  spaceship.rs
get_restapi/: Cargo.toml  README  README.md
get_restapi/src/: lib.rs  main.rs  type_declare.rs
macro_input/: Cargo.toml
macro_input/src/: main.rs
text_byte_file/: Cargo.toml  README  README.md
text_byte_file/src/: actions.rs  convert_byte.rs  lib.rs  main.rs
text_byte_file/src/encryption/: main.rs
thread/src/: main.rs
thread_variable/src/: main.rs
wasm-first/: .gitignore  Cargo.toml  README.md  index.html
wasm-first/src/: lib.rs
web-development/crud-api/: Cargo.toml  Makefile  docker-compose.yml
web-development/crud-api/src/: lib.rs  main.rs
web-development/crud-api/src/controllers/: items_controller.rs
web-development/crud-api/src/database/: connect.rs  mod.rs
web-development/crud-api/src/database/books/: mod.rs  read.rs  write.rs
web-development/crud-api/src/database/items/: mod.rs  read.rs  write.rs
web-development/crud-api/src/routes/: mod.rs  web.rs
web-development/crud-api/src/types/: item.rs  mod.rs
