[package]
name = "get_restapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "*", features = ["json"] }
serde = "1.0.189"
serde_derive = "1.0.189"
tokio = { version = "1", features = ["full"] }
