[package]
name = "crud-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
mongodb = { version = "3.1.0", features = ["sync"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
